projet_gl/src/test/deca/context/valid/1_03/1_03_1_DeclClass.deca
// Description:
//    Programme test si l'on peut créer des class
//
// Resultats:
//
// Historique:
//    cree le 17/01/2024

class A {
    
}