projet_gl/src/test/deca/context/invalid/1_03/1_03_3_DeclClass.deca
// Description:
//    Problème de redéclaration de class
//
// Resultats:
//    Ligne 11: Class identifier: A is already declared previously
// 
// Historique:
//    cree le 17/01/2024

class A {}
class A {}
